# capabilities

./: CHANGELOG.rst  CMakeLists.txt  package.xml
include/capabilities/: client.h
src/capabilities/: launch_manager.py  server.py
src/capabilities/specs/: common.py  interface.py  provider.py  remappings.py  semantic_interface.py
srv/: GetRunningCapabilities.srv
test/: run_coverage
test/rostest/test_client/: test_client_cpp.test  test_client_module.cpp
test/rostest/test_launch_manager/: test_launch_manager.py
test/rostest/test_server/: test_client.py  test_client.test  test_default_provider.py  test_dependent_capabilities.py  test_invalid_specs.py  test_remapping.py  test_ros_services.test
test/unit/: common.py
test/unit/specs/: test_interface.py
